# her

./: .cursorrules  .gitignore  ENVIRONMENT.md  PHASE_COMPLETE.md  README.md  requirements.txt  setup.sh
backend/: __init__.py  action_planner.py  agent_factory.py  her_paths.py  intent_engine.py  main.py  ollama_client.py  tool_registry.py
backend/memory/: __init__.py  chroma_store.py  mempalace_adapter.py  sqlite_store.py
backend/onboarding/: __init__.py  detector.py  greeting.py  location.py  profile.py
backend/online/: __init__.py  decision.py
backend/personality/: __init__.py  extractor.py
backend/proactive/: __init__.py  initiator.py  lull_detector.py  profile_gaps.py
backend/voice/: __init__.py  absorber.py  constants.py  lang_routing.py  preflight.py  recorder.py  session.py  synthesizer.py  transcriber.py  vad.py
frontend/: Untitled  app.js  chat.css  index.html  onboarding.css  settings.html  settings.js
scripts/: download_voice_models.sh  download_whisper_medium.sh  her_memory_status.sh  run-backend-logs.sh  run-backend.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
